vanilla victory points 🤮

--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -65,6 +65,8 @@
  VICTORY_POINTS_587:0 "Neuss"
  VICTORY_POINTS_11411:0 "Stanislau"
  VICTORY_POINTS_863:0 "Larissa"
+ VICTORY_POINTS_11965:0 "Kalamata"
+ VICTORY_POINTS_3988:0 "Korinthos"
  VICTORY_POINTS_3973:0 "Volos"
  VICTORY_POINTS_11786:0 "Trikala"
  VICTORY_POINTS_9930:0 "Kavala"
