--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2071,7 +2071,7 @@
  GRE_absorb_the_IFC_desc:0 "The IFC will be subservient to the will of the Hellenic people. We cannot allow the moneylenders to have such sway over our nation. Measures will be taken to slowly integrate and absorb the IFC, placing it directly under the jurisdiction of the Ministry of the Economy, allowing us to appoint our own members on the committee."
  GRE_economic_recovery:0 "Economic Recovery"
  GRE_economic_recovery_desc:0 "At long last, the Hellenic economy is beginning to show signs of recovery. Our bold and well executed economic reforms have finally yielded growth. A new chapter has begun for our nation, with us now able to properly forge our path forward."
- GRE_fund_university_of_athens:0 "Fund the University of Athens"
+ GRE_fund_university_of_athens:0 "Fund the Kapodistrian University"
  GRE_fund_university_of_athens_desc:0 "Founded in 1837 by King Otto I, the University of Athens is the main centre for higher education in Hellas. By funding the expansion of the University, we can greatly improve the facilities and simultaneously boost our international prestige."
  GRE_solve_distillery_overproduction:0 "Solve Distillery Overproduction"
  GRE_solve_distillery_overproduction_desc:0 "The raisin crisis of 1890 is painfully remembered by many, with some its effects still being present in that sector of the Hellenic economy. We will remedy this by implementing certain regulations aimed at preventing overproduction."
