--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5218,6 +5218,7 @@ ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the m
 pcd_leader:0 "Member of the §mPCD§!"
 pcd_member:0 "Member of the §mPCD§!"
 pcd_leader2:0 "Member of the §mPCD§!"
+ROM_ferd_king:0 "§YFerdinand I§! is King of Romania"
 ROM_a_voice_of_reason:0 "A Voice of Reason"
 ROM_a_voice_of_reason_desc:0 ""
 ROM_a_useful_ally:0 "A Useful Ally"
