--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5223,6 +5223,7 @@ ROM_a_voice_of_reason:0 "A Voice of Reason"
 ROM_a_voice_of_reason_desc:0 ""
 ROM_a_useful_ally:0 "A Useful Ally"
 ROM_a_useful_ally_desc:0 ""
+plays_dirty:0 "Plays Dirty"
 ROM_democratic_coalition:0 "Democratic Coalition"
 ROM_democratic_coalition_desc:0 ""
 ROM_the_moderating_influence:0 "The Moderating Influence"
@@ -5413,6 +5414,8 @@ ROM_reclamation_of_bessarabia:0 "Liberation of Bessarabia"
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
+modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
+
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n\n"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
