--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5024,6 +5024,7 @@ ww1_romania.8.d:0 "While the muslims population in Romania is small, they do hav
 ww1_romania.8.a:0 "We're an inclusive country!"
 ww1_romania.1.t:0 "The Puppet Master"
  ww1_romania.28.t:0 "The Outbreak of the Great War"
+complete_bbore:0 "Completing the focus '§YBackbone of the Romanian Economy§! will §Gimprove§! the effect of this focus!"
  ww1_romania.28.d:0 "The Central Powers vs the Entente, it's the biggest war in human history. With our key position in Europe, there's lots of focus towards us, and what we will do. While a lot of our population is either pro Entente or pro neutrality, we currently have a defensive pact with the Central Powers. While we aren't legally under any obligation to join the war, German and Austrian diplomats have been heavily pressuring our country to join their side as of late, promising vast Russian territories.\n\nIt's unknown if our army is truely ready for a war yet, but joining Germany now could be our best chance to quickly secure our desired territory in Russia while Russia finds itself unprepared. On the otherhand, it may be safer and more practical to simply wait it out, and see how the war progresses. What's the plan?"
  ww1_romania.28.a:0 "We're not ready to take any drastic options here, let's stay neutral for now"
  ww1_romania.28.b:0 "The liberation of Moldova awaits!"
@@ -5228,7 +5229,7 @@ ROM_democratic_coalition:0 "Democratic Coalition"
 ROM_democratic_coalition_desc:0 ""
 ROM_the_moderating_influence:0 "The Moderating Influence"
 ROM_the_moderating_influence_desc:0 ""
-ROM_the_new_constitution:0 "The Tide of Progress"
+ROM_the_new_constitution:0 "Hostile Takeover of the PNL"
 ROM_the_new_constitution_desc:0 ""
 ROM_a_unifying_figure_head:0 "A Unifying Figurehead"
 ROM_a_unifying_figure_head_desc:0 ""
