--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5412,7 +5412,7 @@ ROM_national_unity_idea:0 "National Unity"
 ROM_reclamation_of_bessarabia:0 "Liberation of Bessarabia"
 
 #custom tooltips
-ROM_the_kings_government:0 "The King's Government"
+ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10.00%§!"
