--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5370,7 +5370,7 @@ ww1_romania.35.b:0 "It's not worth the backlash"
 ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
 ROM_reconcile_pcd:0 "Reconcile With the PCD"
 ROM_romania_for_those_who_earn_it_idea:0 "An Optimistic Romania "
-ROM_reconcile_pcd_desc:0 ""
+ROM_reconcile_pcd_desc:0 "Pretty much the entirety of the PCD's leadership is made up of former PC members. While Carp may have alienated them with his foolishness and arrogance, Maiorescu should be able to connect with the PCD's leadership in a way past conservative governments couldn't, openly the way towards integrating some of them in the government."
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
