--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5203,13 +5203,14 @@ ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
 no_happy_few:0 "Has promised King that we won't pursue this policy"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
 
-ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
+ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
 ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
 ROM_tax_cuts_for_the_poor_idea:0 "Tax Cuts for the Poor"
 ROM_tax_cuts_for_the_poor:0 "Relieve the Peasants Burden"
 ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
+ww1_romania.18.g:0 "Petre Carp did a decent job once before..."
  ww1_romania.27.t: "King Carol I Has Died"
  ww1_romania.27.d: "King Carol I, the ruler of Romania since it's entire history as a modern country, has died of natural causes today. As the founder of the modern Romanian state as we know it, all of Romania will mourn for him today. He will be remembered for personally leading the Romania army into battle during the Russo-Ottoman war, and securing Romanias independence in 1878. Now, King Ferdinand will become the next king of Romania. An ally of the liberals, the new king will certainly have his influence on Romanian politics"
 ww1_romania.27.a:0 "Loc writer do this later "
@@ -5375,6 +5376,7 @@ ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
 ROM_recruitment_campaigns:0 "We Need You!"
+ROM_embrace_revanchism:0 "Embrace Revanchism"
 ROM_recruitment_campaign:0 "Recruitment Campaign"
 ROM_german_support:0 "German Support"
 ROM_romanian_claims:0 "Romanian Claims"
