new saves for syrian minority tree

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3688,10 +3688,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_aleppo_vilayet_1027_yes:0 "\n§Y[1027.GetName]§!:[TUR_kurdish_population_1027]"
  ottoman_aleppo_vilayet_1029_yes:0 "\n§Y[1029.GetName]§!:[TUR_arab_population_1029][TUR_kurdish_population_1029]"
 
- TUR_deir_ez_zor_vilayet:0 "Deir Ez-Zor Vilayet"
+ TUR_deir_ez_zor_vilayet:0 "Deir ez-Zor Vilayet"
  TUR_deir_ez_zor_vilayet_desc:0 "[TUR_deir_ez_zor_vilayet_desc]"
  TUR_deir_ez_zor_vilayet_desc_yes:0 "§W[ottoman_deir_ez_zor_vilayet_centralization_desc][ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc]§!"
- ottoman_deir_ez_zor_vilayet_tt_blocked:0 "§YDeir Ez-Zor Vilayet§![ottoman_deir_ez_zor_vilayet_centralization][ottoman_deir_ez_zor_vilayet_separatist_sentiments]"
+ ottoman_deir_ez_zor_vilayet_tt_blocked:0 "§YDeir ez-Zor Vilayet§![ottoman_deir_ez_zor_vilayet_centralization][ottoman_deir_ez_zor_vilayet_separatist_sentiments]"
  ottoman_deir_ez_zor_vilayet_centralization_yes:0 "\nCentralization: [?global.TUR_deir_ez_zor_centralization|Y0%]"
  ottoman_deir_ez_zor_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_deir_ez_zor_centralization|Y0%][ottoman_deir_ez_zor_vilayet_centralization_value]"
  ottoman_deir_ez_zor_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_deir_ez_zor_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_deir_ez_zor_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_deir_ez_zor_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_deir_ez_zor_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_deir_ez_zor_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_deir_ez_zor_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_deir_ez_zor_vc_effect|+%]"
@@ -5620,6 +5620,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_abolish_principality_of_samos:0 "Abolish Principality of Samos"
  TUR_abolish_principality_of_samos_desc:0 "Granted self-rule in 1834, Samos has been enjoying large scale autonomy with its own governor and parliament. Yet as we're trying to integrate our empire, we cannot let this autonomous region to exist within our empire."
  TUR_increase_archipelago_centralization_5:0 "Modify §YCentralization§! of §YArchipelago Vilayet§! by §G+5%§!\n"
+ TUR_integrate_arab_citizens_tt:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n\n"
+ TUR_integrate_jewish_citizens_tt:0 "£ww1_flag_ISR  §YJewish Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n\n"
 
  TUR_armenian_level_down:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n"
  TUR_greek_level_down:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n"
@@ -5844,8 +5846,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!\n"
  TRS_arabist_movement_desc1:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful."
  TRS_arabist_movement_desc2:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful.\n\nIn order to execute actions to surpress Arabists, we need to have a justification.\nCurrent §YOppression Justifications§!: [?TRS_oppression_justification|Y0]"
- TRS_fabricate_claim:0 "Fabricate Claims"
- TRS_fabricate_claim_desc:0 "Though we have a large autonomy of action in Syria, no authority can act without legitimacy. In order to not lose our already diminishing legitimacy, we'll use justifications to oppress the Arabist movement. Even if there's no real opposition or treason, we'll simply create our own sources to oppress what potential there is."
+ TRS_fabricate_claims:0 "Fabricate Claims"
+ TRS_fabricate_claims_desc:0 "Though we have a large autonomy of action in Syria, no authority can act without legitimacy. In order to not lose our already diminishing legitimacy, we'll use justifications to oppress the Arabist movement. Even if there's no real opposition or treason, we'll simply create our own sources to oppress what potential there is."
  TRS_bribe_sources:0 "Bribe Sources"
  TRS_bribe_sources_desc:0 "Arabists themselves has no loyalty to their cause, They're ready to sell information for just a bit of dime."
  TRS_plant_documents:0 "Plant Documents"
