--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4325,6 +4325,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.86.t:0 "The British Seize our Battleships!"
  ottoman.86.d:0 "We ordered two battleships to Britain, and the ships were about to be completed. But the British took away our battleships to use their own!"
  ottoman.86.a:0 "What the hell is going on?!"
+ TUR_sized_our_ships:0 "Seized Our Ships"
  ottoman.87.t:0 "[TUR.GetAdjective] Battleship Deal Falls Through"
  ottoman.87.d:0 "As the construction of the Reşadiye-class battleships are completed, [TUR.GetName] refused to make the last payment and has called the deal is off."
  ottoman.87.a:0 "I suppose we can put them into good use."
