localisation of syrian decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5539,6 +5539,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_disband_prisoner_conscripts_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+3.00%§!\n£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n"
  TUR_disband_prisoner_conscripts_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+4.00%§!\n£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.40%§!\n"
  TUR_disband_prisoner_conscripts_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
+ TUR_settle_druze_tribes:0 "Settle Druze Tribes in [FROM.GetName]"
+ TUR_settle_druze_tribes_desc:0 "Mostly located in the south of Damascus and in Mount Lebanon, Druze tribes have enjoyed a large degree of autonomy to combat Christian influence in the area as well as benefiting from their agricultural support. Yet as our government is focusing on centralizing its realm, we'll settle them into provinces we see fit."
+ TUR_settle_bedouin_tribes:0 "Settle Bedouin Tribes in [FROM.GetName]"
+ TUR_settle_bedouin_tribes_desc:0 "Mostly located in the south of Jerusalem and Karak, Bedouin tribes have enjoyed a an absence of state as they're located in the border region with Egypt. Yet as our government is focusing on centralizing its realm, we'll settle them into provinces we see fit."
+ TUR_settle_tribes_in_deir_ez_zor:0 "Settle Tribes in [FROM.GetName]"
+ TUR_settle_tribes_in_deir_ez_zor_desc:0 "Deir ez-Zor stands as a desolate place surrounded by desert. Untill know, the little Arab tribes that were present in the state has been roaming free. By settling tribes in [FROM.GetName], we can centralize Deir ez-Zor Vilayet."
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_nationalize_greek_businesses_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
@@ -5620,7 +5626,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_abolish_principality_of_samos:0 "Abolish Principality of Samos"
  TUR_abolish_principality_of_samos_desc:0 "Granted self-rule in 1834, Samos has been enjoying large scale autonomy with its own governor and parliament. Yet as we're trying to integrate our empire, we cannot let this autonomous region to exist within our empire."
  TUR_increase_archipelago_centralization_5:0 "Modify §YCentralization§! of §YArchipelago Vilayet§! by §G+5%§!\n"
+ TUR_integrate_arab_citizens:0 "Integrate Arab Citizens in [FROM.GetName]"
+ TUR_integrate_arab_citizens_desc:0 "Our centralization policies in our Arab lands have been regarded as quite unpopular by many. Yet as we've successfully centralized these regions, we can move on to "taming" and "integrating" our Arab citizens that were discontent with our policies."
  TUR_integrate_arab_citizens_tt:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n\n"
+ TUR_integrate_jewish_citizens:0 "Integrate Jewish Citizens in [FROM.GetName]"
+ TUR_integrate_jewish_citizens_desc:0 "Our centralization policies in Jewish populated areas have been regarded as quite unpopular by many. Yet as we've successfully centralized these regions, we can move on to "taming" and "integrating" our Jewish citizens that were discontent with our policies."
  TUR_integrate_jewish_citizens_tt:0 "£ww1_flag_ISR  §YJewish Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n\n"
 
  TUR_armenian_level_down:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n"
@@ -5836,7 +5846,31 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_fund_regional_churches_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n\n"
  TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
  TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
+ TUR_mass_education:0 "Mass Education in [TUR_vilayet_name_list]"
+ TUR_mass_education_desc:0 "Integrating a region goes through indoctrinating its young minds. As we spread pro-Ottoman education in [TUR_vilayet_name_list], its citizens will feel themselves as a part of the empire."
+ TUR_construction_endeavours:0 "Construction Endeavours in [TUR_vilayet_name_list]"
+ TUR_construction_endeavours_desc:0 "State of the Syrian provinces are neglected nonetheless. As we sponsor various construction projects such as road extension, boulevard construction and putting new water wheels, we'll be able to attain control in [TUR_vilayet_name_list]."
+ TRS_purchase_damascus_aleppo_railway:0 "Purchase Damascus-Aleppo Railway"
+ TRS_purchase_damascus_aleppo_railway_desc:0 "Built and operated by the French, Damascus-Aleppo line stretches from Damascus to Aleppo stations. Purchasing the rights of the railway will make it usable for centralizing the empire."
+ TRS_seize_damascus_aleppo_railway:0 "Seize Damascus-Aleppo Railway"
+ TRS_seize_damascus_aleppo_railway_desc:0 "Built and operated by the French, Damascus-Aleppo line stretches from Damascus to Aleppo stations. Since we're at war, we can seize the railway and use it for centralizing the empire."
  TUR_seized_railway:0 "Seized Railway"
+ TRS_purchase_beirut_port_rights:0 "Purchase Beirut Port Rights"
+ TRS_purchase_beirut_port_rights_desc:0 "Built and operated by the French, Beirut port is one of the busiest and most profitable ports in Syria.Purchasing the rights of the port will make it usable for centralizing the empire."
+ TRS_seize_beirut_port_rights:0 "Seize Beirut Port Rights"
+ TRS_seize_beirut_port_rights_desc:0 "Built and operated by the French, Beirut port is one of the busiest and most profitable ports in Syria. Since we're at war, we can seize the port and use it for centralizing the empire."
+ TRS_purchase_beirut_damascus_railway:0 "Purchase Beirut-Damascus Railway"
+ TRS_purchase_beirut_damascus_railway_desc:0 "Built and operated by the French, Beirut-Damascus line stretches from Beirut to Damascus stations. Purchasing the rights of the railway will make it usable for centralizing the empire."
+ TRS_seize_beirut_damascus_railway:0 "Seize Beirut-Damascus Railway"
+ TRS_seize_beirut_damascus_railway_desc:0 "Built and operated by the French, Beirut-Damascus line stretches from Beirut to Damascus stations. Since we're at war, we can seize the railway and use it for centralizing the empire."
+ TRS_purchase_hauran_railway:0 "Purchase Hauran Railway"
+ TRS_purchase_hauran_railway_desc:0 "Built and operated by the French, Hauran railway stretches from Damascus to Hauran to the south. Purchasing the rights of the railway will make it usable for centralizing the empire."
+ TRS_seize_hauran_railway:0 "Seize Hauran Railway"
+ TRS_seize_hauran_railway_desc:0 "Built and operated by the French, Hauran railway stretches from Damascus to Hauran to the south. Since we're at war, we can seize the railway and use it for centralizing the empire."
+ TRS_purchase_jaffa_jerusalem_railway:0 "Purchase Jaffa-Jerusalem Railway"
+ TRS_purchase_jaffa_jerusalem_railway_desc:0 "Built and operated by the French, Jaffa-Jerusalem line stretches from Jaffa to Jerusalem stations. Purchasing the rights of the railway will make it usable for centralizing the empire."
+ TRS_seize_jaffa_jerusalem_railway:0 "Seize Jaffa-Jerusalem Railway"
+ TRS_seize_jaffa_jerusalem_railway_desc:0 "Built and operated by the French, Jaffa-Jerusalem line stretches from Jaffa to Jerusalem stations. Since we're at war, we can seize the railway and use it for centralizing the empire."
  TUR_increase_beirut_centralization_05:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+5%§!\n"
  TUR_increase_beirut_centralization_15:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+15%§!\n"
  TUR_increase_jerusalem_centralization_20:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §G+20%§!\n"
