Revert "decision rework"
This reverts commit e816d4896968a8cbba4a46aaa1ecb9b943e0a052.

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1359,7 +1359,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  GRE_form_greater_greece:0 "Realize the Megali Idea"
  GRE_megali_decision_desc:0 "With the collapse of the Byzantine Empire, most of its territory has been conquered by foreign invaders. Despite these brutal conquests, the Greek population and culture have remained. We shall aim to expand our borders and free our enslaved population in foreign territories! Once more, as years and time go by, once more they shall be ours!"
  GRE_buy_guns_decisions:0 "Foreign Equipment Purchases"
- GRE_buy_FROM_infantry_weapons:0 "Purchase Military Equipment from [FROM.GetName]"
+ GRE_buy_FROM_infantry_weapons:0 "Purchase Infantry Weapons from [FROM.GetName]"
  GRE_buy_FROM_support_equipment:0 "Purchase Support Equipment from [FROM.GetName]"
  GRE_buy_FROM_artillery_equipment:0 "Purchase Artillery from [FROM.GetName]"
  GRE_sue_for_peace_TRR:0 "Sue for Peace with [FROM.GetNameDef]"
