purchasing guns image and desc

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1386,6 +1386,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  GRE_purchase_smith_class:0 "Purchase Smith Class"
 
  GRE_navy_decisions_desc:0 "Starting from Greek merchant fleets and fireships in the 1821 Revolution, our navy has been relatively successful in damaging the Ottoman navy. Despite that, with a renewed Greco-Ottoman naval arms race, we are at risk of being the underdog in the Aegean Sea, and thus we must purchase battleships from the Great Powers in order to protect our seas."
+ GRE_buy_guns_decisions_desc:0 "Our country, unlike the other major European industrial powerhouses, is lacking in domestic war production and thus we must rely on military contracts from foreign companies. With these purchases we will adequately supply our army, however we must not risk heavily indebting our nation more than it already is."
  GRE_road_to_ankara:0 "Road to Ankara"
  GRE_road_to_ankara_desc:0 "In order to force the Turks to negotiations, Ankara, an important supply hub and command center in central Anatolia, needs to be captured. Failure of the operation will most likely result in the Turkish army being in a much more empowered position than before. Greece does not have much time..."
  GRE_road_to_ankara_desc_TRR:0 "ds"
