starting focus names

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5078,6 +5078,12 @@
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
 
+ TUR_uncrowned_king_of_syria:0 "Uncrowned King of Syria"
+ TUR_uncrowned_king_of_syria_desc:0 "One of the members of the Union of Committee, Minister of the Navy and the recently assigned general governor of the Syrian provinces of the Ottoman Empire, Ahmed Cemâl Paşa is a man with great authority. Ever since his appointment, he was equipped with extraordinary powers to reform and centralize the Syrian provinces. As he has power high enough to even rival the central government, he's nicknamed as the Uncrowned King of Syria by many of his friends and foes."
+ TUR_cemals_personal_territory:0 "Cemâl's Personal Territory"
+ TUR_cemals_personal_territory_desc:0 "As Cemâl Paşa is sent to Syria to reform the provinces, he was given extraordinary power, power that no individual has even seen in these lands. This authority resulted in him to have these lands as his personal territory, having the power to do as he pleases. As he's the utmost authority in Syria, his decisions will directly shape the administration and society in these lands."
+ TUR_rewarding_loyalties:0 "Rewarding Loyalties"
+ TUR_rewarding_loyalties_desc:0 "Above capabilities, Cemâl Paşa values loyalty more than anything. Turk, Arab, Kurd or Armenian, those who stand loyal to him will be rewarded while those standing against him will be punished. His strict importance to loyalty makes his inner circle trustable and easy to control."
  TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£command_power_max_texticon  Maximum Command Power Increase Multiplier: §G+10%§!\n\n"
  TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-50%§!\n\n"
  TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
