diaspora greeks event

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13923,6 +13923,10 @@ ww1_greece.246.t: "Thessaloniki falls to Bulgaria..."
 ww1_greece.246.d: "Even though our initial offenses seemed successful, we were blocked in the Axios river and suffered many defeats with even more casualties. Our defeat in the Battle of Yenidje prevented us from advancing in any direction in the Macedonian theater, North, West or East, only South into our retreat, and gave the Bulgarians enough time to make significant advances. Thus, Thessaloniki fell to the advancing Bulgarian Army shortly after, with our army entering the outskirts of the city 1 day later. This is a signicant loss to us, and someone is certainly responsible for this disaster!"
 ww1_greece.246.a: "Our failures continue to burden us."
 
+ww1_greece.247.t: "Diaspora Greeks aid us!"
+ww1_greece.247.d: "Diaspora Greeks have always been there for us for decades now, all the way since our country's independence. Our national debt has grown yet again due to our needed expenses, however we have received yet again a paid remittance from US Greeks, a process that became common in the late 1890s. This of course alleviates the pressure of our debts, and we can dedicate those funds to repaying our loans."
+ww1_greece.247.a: "We are forever grateful."
+
  # BURMA
  ww1_burma.1.t:0 "Thibaw Died!"
  ww1_burma.1.d:0 "King Thiba Min, who tried to stop British colonisation attempt and to modernise Burma, died today."
