--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5202,7 +5202,10 @@ disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments 
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
 no_happy_few:0 "Has promised King that we won't pursue this policy"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
-
+ww1_romania.40.t:0 "Romania Requests Bukovina In Exchange for Joining the Central Powers"
+ww1_romania.40.d:0 "While already signed a defensive pact with us and Germany, Romania would have no obligations to us if an offensive war against the Entente was started by us. Although Romania joining us against Russia was seen as a forgone conclusion a few years ago, its clear Romania has started to drift away from our sphere of influence lately. Today, Romanias ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While Germany is pressuring us to accept Romanias request, it would certainly anger Hungary."
+ww1_romania.40.a:0 "They cannot be serious!"
+ww1_romania.40.b:0 "We don't have a use for this province anyways"
 ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
