Romania will not have mils, will be dependent on foreign purchases

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5425,13 +5425,18 @@ modify_rom_army_sup:0 "Modify §YRomanian Army§! by\nSupply Consumption: §G-10
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n\n"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
-ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
+ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
 
+ROM_strike_swift_and_hard_tt:0 "On the completion of the §YTurn West§! focus:\n"
+ROM_german_industrial_aid2:0 "German Arms Embargo"
 ROM_adapt_to_times.tt:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
-
+ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
+ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
+ww1_romania.41.a:0 "These terms arn't that bad"
+ww1_romania.41.b:0 "Who do they think they are?"
 ROM_adapt_times.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n\n"
 ROM_for_truth.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 member_of_pc:0 "Member of §cPC§!"
