--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5443,6 +5443,7 @@ member_of_pc:0 "Member of §cPC§!"
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
+ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
 ROM_rightqing_thin:0 "§GAvailable§! as §YPolitical Advisor§!:\n§YAlexandru Cuza§!, which grants (Daily Proto-Fascist Support: §G+0.10§!, Daily Political Power Gain: §G+0.05§!, Consumer Goods Factories factor: §Y-5.0%§!)"
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
