kis to great war

--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -991,7 +991,7 @@
  frankfurt_conference:0 "Франкфуртская конференция"
  frankfurt_conference_desc:0 "Политики из Центральных Держав обсуждают, как разделить территории и колонии побежденных стран и расширить их империи и гегемонию."
  frankfurt_treaty:0 " Франкфуртский договор "
- kis_war:0 "Великая Война\n"
+ great_war:0 "Великая Война\n"
  great_war_loser:0 "Поражение в Великой Войне\n"
  great_war_winner:0 "Победа в Великой Войне\n"
  interbellum:0 "Интербеллум\n"
