kis to great war

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1032,7 +1032,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  frankfurt_conference:0 "Frankfurt Conference"
  frankfurt_conference_desc:0 "Politicians from the Central Powers are debating how to divide the defeated countries territories and colonies and expand their empires and hegemonies."
  frankfurt_treaty:0 " Frankfurt Treaty "
- kis_war:0 "The Great War\n"
+ great_war:0 "The Great War\n"
  great_war_loser:0 "Defeat in the Great War\n"
  great_war_winner:0 "Victory in the Great War\n"
  interbellum:0 "Interbellum\n"
