--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -182,7 +182,7 @@
  frankfurt_armistice_tt:0 "The Great War ended in the defeat of Entente."
  frankfurt_conference:0 "Frankfurt Conference"
  frankfurt_treaty:0 " Frankfurt Treaty "
- kis_war:0 "The Great War\n"
+ great_war:0 "The Great War\n"
  great_war_loser:0 "Defeat in the Great War\n"
  great_war_winner:0 "Victory in the Great War\n"
  interbellum:0 "Interbellum\n"
